--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 <div class="projects-container">
     <div class="project-card">
         <h2>Landing Page</h2>
-        <a href="./landing-page/index.html" target="_blank">Voir le projet</a>
+        <a href="./Landing-Page/index.html" target="_blank">Voir le projet</a>
     </div>
 
     <div class="project-card">
         <h2>Company Website</h2>
-        <a href="./company-website/index.html" target="_blank">Voir le projet</a>
+        <a href="./Company-Website/index.html" target="_blank">Voir le projet</a>
     </div>
 
     <div class="project-card">
         <h2>Portfolio Website</h2>
-        <a href="./portfolio-website/index.html" target="_blank">Voir le projet</a>
+        <a href="./Portfolio-Website/index.html" target="_blank">Voir le projet</a>
     </div>
 
     <div class="project-card">
