--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="project-card">
-        <h2>Company Website</h2>
+        <h2>Company website</h2>
         <a href="./Company-Website/index.html" target="_blank">Voir le projet</a>
     </div>
 
