--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="project-card">
         <h2>Company website</h2>
-        <a href="./Company-Website/index.html" target="_blank">Voir le projet</a>
+        <a href="./Company-website/index.html" target="_blank">Voir le projet</a>
     </div>
 
     <div class="project-card">
